fixed question mark alignment

--- a/wtwlaravel/public/css/info_style.css
+++ b/wtwlaravel/public/css/info_style.css
@@ -53,3 +53,13 @@ ol.carousel-indicators li.active {
   all: none;
   display: none;
 }
+
+.fa_custom {
+    color: #2C7AED;
+    background-color: white;
+    border-radius: 50%;
+    height: 90px;
+    width: 80px;
+    padding: 10px;
+    margin-right: 20px;
+}
